<resources>
    <string name="app_name">Map</string>
    <string name="search_hint" />
    <string name="title_name">検索してみてね</string>
    <string name="button1">検索を始める</string>
    <string name="text1">今日はどこへ行きますか？</string>
    <string name="image1">titlemap</string>
    <string name="explain">Ａ棟２階の見取り図を見る</string>
    <string name="explain2">直通の渡り廊下を通って行くことが出来る</string>
    <string name="map_b3">map_b3</string>
    <string name="explain3">○B棟からの場合</string>

</resources>