<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        android:textSize="20sp"
       android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="150dp"/>
    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:gravity="bottom">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="418dp"
        android:layout_height="483dp"
        android:contentDescription="@string/image1"
        app:srcCompat="@drawable/map1"
        tools:ignore="MissingConstraints"
        />
</LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>