<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result1Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="B棟3階からの場合"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="130dp"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/map_b3"
        android:contentDescription="@string/map_b3" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/explain2"
            android:textSize="15sp"
            android:layout_marginTop="500dp"
            android:layout_marginStart="80dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explain"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="550dp"
            android:layout_marginStart="100dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>